# ERSim

./: .dockerignore  .gitignore  CHANGES_SUMMARY.md  DEPLOY_RENDER.md  DESIGN_APPROVAL_SYSTEM.md  Dockerfile  PLAN_FEATURES.md  PLAN_INTERACTION_FIXES.md  PLAYTEST_NOTES_2.md  PLAYTEST_REPORT.md  PLAYTEST_REPORT_AUTO.md  PLAYTEST_REPORT_V2.md  PLAYTEST_REPORT_V3.md  ersim-setup  export_feedback.py  llm.py  models.yaml  playtest_agentic.py  playtest_auto.py  playtest_run1.py  playtest_run2.py  playtest_run3.py  playtest_v2.py  playtest_v3.py  progress.md  pyproject.toml  render.yaml  requirements.txt  run.py  test_output.json
.github/workflows/: ci.yml
api/: __init__.py  commands.py  feedback_store.py  main.py  session.py  ticker.py
api/static/: index.html
art/: prompts.md
cases/: __init__.py  case_templates.py  demo_cases.py  generator.py  interaction.py  prompts.py  schema.py  test_generation.py  test_interaction.py
frontend/: index.html  vite.config.js
frontend/src/: ActionBar.jsx  App.css  App.jsx  RosterScreen.jsx  index.css  useGameSocket.js
residents/: __init__.py  prompts.py  resident.py  schema.py  test_resident.py
shift/: __init__.py  bay.py  constants.py  debrief_mixin.py  navigation_mixin.py  patient_actions_mixin.py  plans_mixin.py  rendering_mixin.py  resolve_mixin.py  setup_mixin.py  shift.py  shift_types.py  test_shift.py  tests_mixin.py  timers_mixin.py  traps.py
tests/: conftest.py  test_llm.py  test_shift_smoke.py
tests/api/: test_api_contracts.py  test_command_payloads.py  test_ticker.py
tests/interaction/: test_patient_session.py
(+13 files in other folders)
